--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                   </div>
                   <div id="form-messages" class="alert"></div>
                   <div class="text-center">
-                    <input type="submit" value="Send message" class="btn btn-primary btn-block">
+                    <input type="submit" id="submit-btn" value="Send message" class="btn btn-primary btn-block">
                   </div>
                 </div>
               </form>
