Minor bug fixes

--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
       <h2 class="heading">Clients</h2>
       <div class="row justify-content-md-center">
         <div class="col-lg-3 col-sm-6 col-xs-6 customer"><img src="img/customers/Style Up With Kim.png" title="Style Up With Kim" data-placement="bottom" data-toggle="tooltip"
-            alt="Style Up With Kim" class="img-responsive"></div>
+            alt="Style Up With Kim logo" class="img-responsive"></div>
         <div class="col-lg-3 col-sm-6 col-xs-6 customer"><img src="img/customers/JGC-logo.png" title="Jordan Gospel Centre" data-placement="bottom" data-toggle="tooltip"
-            alt="" class="img-responsive"></div>
-        <div class="col-lg-3 col-sm-6 col-xs-6 customer"><img src="img/customers/logo - style plus.png" title="Style Plus" data-placement="bottom" data-toggle="tooltip" alt=""
+            alt="Jordan Gospel Centre logo" class="img-responsive"></div>
+        <div class="col-lg-3 col-sm-6 col-xs-6 customer"><img src="img/customers/logo - style plus.png" title="Style Plus" data-placement="bottom" data-toggle="tooltip" alt="Style Plus logo"
             class="img-responsive"></div>
         <div class="col-lg-3 col-sm-6 col-xs-6 customer"><img src="img/customers/hi family international.png" title="Hi Family International" data-placement="bottom" data-toggle="tooltip"
-            alt="" class="img-responsive"></div>
+            alt="Hi Family International logo" class="img-responsive"></div>
       </div>
     </div>
   </section>
