Added vendor files and updated to system fonts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-56318005-2');
-
   </script>
 
   <meta charset="utf-8">
@@ -21,10 +20,8 @@
   <meta name="robots" content="all,follow">
   <!-- Bootstrap and Font Awesome css-->
   <!-- we use cdn but you can also include local files located in css directory-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <!-- Google fonts - Open Sans-->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800,400italic">
+  <link rel="stylesheet" href="vendor/font-awesome.min.css">
+  <link rel="stylesheet" href="vendor/bootstrap.min.css">
   <!-- theme stylesheet-->
   <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
   <!-- Custom stylesheet - for your changes-->
@@ -270,12 +267,12 @@
     </div>
   </footer>
   <!-- Javascript files-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="vendor/jquery.min.js"></script>
   <script>
     window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')
   </script>
   <script src="js/contact.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="vendor/bootstrap.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;amp;sensor=false"></script>
   <script src="js/front.js"></script>
 </body>
