Hosted fonts locally

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </div>
   </section>
-  <section id="about" class="section">
+  <section id="about" class="section no-padding-bottom">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -60,7 +60,7 @@
               <p>My name is <strong>Emmanuel Chucks</strong>. I'm a graphic/web designer and full-stack JavaScript programmer
                 with experience in a wide field of front-end development skills.</p>
               <p>A humble graduate of the University Of Benin with a Bachelors in Computer Engineering.</p>
-              <p><img src="img/Emmanuel Chucks.jpg" alt="Emmanuel Chucks" class="image img-circle img-responsive"></p>
+              <p><img src="img/Emmanuel Chucks.jpg" alt="Emmanuel Chucks" class="image img-circle img-responsive about-pic"></p>
             </div>
             <div class="col-sm-6">
               <p>I help companies like yours build great websites that don't only look great but bring in actual measurable
@@ -207,10 +207,6 @@
                   <div class="row">
                     <div class="col-sm-6">
                       <div class="form-group">
-                        <!-- Formspree API manipulations -->
-                        <input type="hidden" name="_subject" value="New Contact Form Submission">
-                        <input type="hidden" name="_format" value="plain">
-
                         <label for="name">Your name *</label>
                         <input type="text" name="name" id="name" placeholder="Enter your name" required="required" class="form-control">
                       </div>
@@ -230,7 +226,7 @@
                     <label for="message">Your message *</label>
                     <textarea rows="4" name="message" id="message" placeholder="Enter your message" required="required" class="form-control"></textarea>
                   </div>
-                  <div id="form-messages" class="alert"></div>
+                  <div id="form-messages" class=""></div>
                   <div class="text-center">
                     <input type="submit" id="submit-btn" value="Send message" class="btn btn-primary btn-block">
                   </div>
