--- a/index.html
+++ b/index.html
@@ -2,16 +2,6 @@
 <html>
 
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-56318005-2"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-56318005-2');
-  </script>
-
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Emmanuel Chucks - Web Designer & Javascript Programmer</title>
@@ -28,10 +18,6 @@
   <link rel="stylesheet" href="css/custom.css">
   <!-- Favicon-->
   <link rel="shortcut icon" href="favicon.png">
-  <!-- Tweaks for older IEs-->
-  <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
 </head>
 
 <body>
@@ -60,7 +46,7 @@
               <p>My name is <strong>Emmanuel Chucks</strong>. I'm a graphic/web designer and full-stack JavaScript programmer
                 with experience in a wide field of front-end development skills.</p>
               <p>A humble graduate of the University Of Benin with a Bachelors in Computer Engineering.</p>
-              <p><img src="img/Emmanuel Chucks.jpg" alt="Emmanuel Chucks" class="image img-circle img-responsive about-pic"></p>
+              <p><img src="./img/spinner.gif" data-src="./img/Emmanuel Chucks.jpg" alt="Emmanuel Chucks" class="image img-circle img-responsive about-pic"></p>
             </div>
             <div class="col-sm-6">
               <p>I help companies like yours build great websites that don't only look great but bring in actual measurable
@@ -138,31 +124,31 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
             <div class="item active">
-              <img src="./img/portfolio/suwk-banner.png" alt="SUWK banner">
+              <img src="./img/spinner.gif" data-src="./img/portfolio/suwk-banner.png" alt="SUWK banner">
             </div>
 
             <div class="item">
-              <img src="./img/portfolio/suwk-website.png" alt="StyleUpWithKim.com">
+              <img src="./img/spinner.gif" data-src="./img/portfolio/suwk-website.png" alt="StyleUpWithKim.com">
             </div>
 
             <div class="item">
-              <img src="./img/portfolio/2017 revival.png" alt="JGC banner">
+              <img src="./img/spinner.gif" data-src="./img/portfolio/2017 revival.png" alt="JGC banner">
             </div>
 
             <div class="item">
-              <img src="./img/portfolio/2017 sticker.png" alt="JGC sticker">
+              <img src="./img/spinner.gif" data-src="./img/portfolio/2017 sticker.png" alt="JGC sticker">
             </div>
 
             <div class="item">
-              <img src="./img/portfolio/youth summit-banner.png" alt="JGC youth banner">
+              <img src="./img/spinner.gif" data-src="./img/portfolio/youth summit-banner.png" alt="JGC youth banner">
             </div>
 
             <div class="item">
-              <img src="./img/portfolio/boy-benji.png" alt="Boy-Benji design">
+              <img src="./img/spinner.gif" data-src="./img/portfolio/boy-benji.png" alt="Boy-Benji design">
             </div>
 
             <div class="item">
-              <img src="./img/portfolio/hi-family banner.png" alt="Boy-Benji design">
+              <img src="./img/spinner.gif" data-src="./img/portfolio/hi-family banner.png" alt="Boy-Benji design">
             </div>
           </div>
 
@@ -184,13 +170,13 @@
     <div class="container">
       <h2 class="heading">Clients</h2>
       <div class="row justify-content-md-center">
-        <div class="col-lg-3 col-sm-6 col-xs-6 customer"><img src="img/customers/Style Up With Kim.png" title="Style Up With Kim" data-placement="bottom" data-toggle="tooltip"
+        <div class="col-lg-3 col-sm-6 col-xs-6 customer"><img src="./img/spinner.gif" data-src="./img/customers/Style Up With Kim.png" title="Style Up With Kim" data-placement="bottom" data-toggle="tooltip"
             alt="Style Up With Kim logo" class="img-responsive"></div>
-        <div class="col-lg-3 col-sm-6 col-xs-6 customer"><img src="img/customers/JGC-logo.png" title="Jordan Gospel Centre" data-placement="bottom" data-toggle="tooltip"
+        <div class="col-lg-3 col-sm-6 col-xs-6 customer"><img src="./img/spinner.gif" data-src="./img/customers/JGC-logo.png" title="Jordan Gospel Centre" data-placement="bottom" data-toggle="tooltip"
             alt="Jordan Gospel Centre logo" class="img-responsive"></div>
-        <div class="col-lg-3 col-sm-6 col-xs-6 customer"><img src="img/customers/logo - style plus.png" title="Style Plus" data-placement="bottom" data-toggle="tooltip" alt="Style Plus logo"
+        <div class="col-lg-3 col-sm-6 col-xs-6 customer"><img src="./img/spinner.gif" data-src="./img/customers/logo - style plus.png" title="Style Plus" data-placement="bottom" data-toggle="tooltip" alt="Style Plus logo"
             class="img-responsive"></div>
-        <div class="col-lg-3 col-sm-6 col-xs-6 customer"><img src="img/customers/hi family international.png" title="Hi Family International" data-placement="bottom" data-toggle="tooltip"
+        <div class="col-lg-3 col-sm-6 col-xs-6 customer"><img src="./img/spinner.gif" data-src="./img/customers/hi family international.png" title="Hi Family International" data-placement="bottom" data-toggle="tooltip"
             alt="Hi Family International logo" class="img-responsive"></div>
       </div>
     </div>
@@ -267,6 +253,16 @@
   </script>
   <script src="js/contact.js"></script>
   <script src="vendor/bootstrap.min.js"></script>
+  <script>
+    window.addEventListener('load', function () {
+      var allimages = document.getElementsByTagName('img');
+      for (var i = 0; i < allimages.length; i++) {
+        if (allimages[i].getAttribute('data-src')) {
+          allimages[i].setAttribute('src', allimages[i].getAttribute('data-src'));
+        }
+      }
+    }, false)
+  </script>
 </body>
 
 </html>
