--- a/index.html
+++ b/index.html
@@ -203,11 +203,19 @@
                         <input type="text" name="compname" id="compname" placeholder="Enter your  company's name" required="required" class="form-control">
                       </div>
                     </div>
+                  <div class="col-sm-6">
+                    <div class="form-group">
+                      <label for="email">Your email *</label>
+                      <input type="email" name="email" id="email" placeholder="Enter your  email" required="required" class="form-control">
+                    </div>
                   </div>
-                  <div class="form-group">
-                    <label for="email">Your email *</label>
-                    <input type="email" name="email" id="email" placeholder="Enter your  email" required="required" class="form-control">
+                  <div class="col-sm-6">
+                    <div class="form-group">
+                      <label for="phone">Your phone number *</label>
+                      <input type="tel" name="phone" id="phone" placeholder="Enter your phone number" required="required" class="form-control">
+                    </div>
                   </div>
+                </div>
                   <div class="form-group">
                     <label for="message">Your message *</label>
                     <textarea rows="4" name="message" id="message" placeholder="Enter your message" required="required" class="form-control"></textarea>
