--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Emmanuel Chucks - Web Designer & Javascript Programmer</title>
+  <title>Emmanuel Chucks - Web Designer & Javascript Developer</title>
   <meta name="description" content="Let me help you make a good impression on your online clients by building a great-looking website.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="all,follow">
@@ -43,7 +43,7 @@
         <div class="col-sm-12">
           <div class="row">
             <div class="col-sm-6 text-left">
-              <p>My name is <strong>Emmanuel Chucks</strong>. I'm a graphic/web designer and full-stack JavaScript programmer
+              <p>My name is <strong>Emmanuel Chucks</strong>. I'm a graphic/web designer and full-stack JavaScript developer
                 with experience in a wide field of front-end development skills.</p>
               <p>A humble graduate of the University Of Benin with a Bachelors in Computer Engineering.</p>
               <p><img src="./img/placeholder.png" data-src="./img/Emmanuel Chucks.jpg" alt="Emmanuel Chucks" class="image img-circle img-responsive about-pic"></p>
@@ -203,19 +203,19 @@
                         <input type="text" name="compname" id="compname" placeholder="Enter your  company's name" required="required" class="form-control">
                       </div>
                     </div>
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <label for="email">Your email *</label>
-                      <input type="email" name="email" id="email" placeholder="Enter your  email" required="required" class="form-control">
+                    <div class="col-sm-6">
+                      <div class="form-group">
+                        <label for="email">Your email *</label>
+                        <input type="email" name="email" id="email" placeholder="Enter your  email" required="required" class="form-control">
+                      </div>
+                    </div>
+                    <div class="col-sm-6">
+                      <div class="form-group">
+                        <label for="phone">Your phone number *</label>
+                        <input type="tel" name="phone" id="phone" placeholder="Enter your phone number" required="required" class="form-control">
+                      </div>
                     </div>
                   </div>
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <label for="phone">Your phone number *</label>
-                      <input type="tel" name="phone" id="phone" placeholder="Enter your phone number" required="required" class="form-control">
-                    </div>
-                  </div>
-                </div>
                   <div class="form-group">
                     <label for="message">Your message *</label>
                     <textarea rows="4" name="message" id="message" placeholder="Enter your message" required="required" class="form-control"></textarea>
