Fixed minor typos

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <p>Your website is your online identity. It is also your online office. As much as it showcases your brand and
                 your services, it should also be able to convert prospects into <strong>paying customers.</strong></p>
               <div class="skill-item">
-                <div class="progress-title">HTML & CSS</div>
+                <div class="progress-title">HTML5 & CSS3</div>
                 <div class="progress">
                   <div role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;" class="progress-bar progress-bar-skill1"><span class="sr-only">70</span></div>
                 </div>
@@ -229,8 +229,8 @@
             </div>
             <div class="col-md-6">
               <p>Send me an email so we can discuss on how to get you that great-looking website that will give your business
-                the well-deserved online identity boost it needs.</p>
-              <p>If we prefer to call, I am available on <strong><a href="tel:+233507124327" title="Emmanuel Chucks' Phone Number">+233507124327</a></strong>                on weekdays from 8am - 10pm.</p>
+                the well-deserved online identity boost it deserves.</p>
+              <p>If you prefer to call, I am available on <strong><a href="tel:+233507124327" title="Emmanuel Chucks' Phone Number">+233507124327</a></strong>                on weekdays from 8am - 10pm.</p>
               <p class="social">
                 <a href="https://linkedin.com/in/emmanuelchucks" title="Emmanuel Chucks' LinkedIn" class="linkedin"><i class="fa fa-linkedin"></i></a>
                 <a href="https://twitter.com/emmanuelchucks" title="Emmanuel Chucks' Twitter" class="twitter"><i class="fa fa-twitter"></i></a>
