--- a/crypto-dashboard/index.html
+++ b/crypto-dashboard/index.html
@@ -23,22 +23,27 @@
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="stellar" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
-    <div class="coinmarketcap-currency-widget" data-currency="iota" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
-        data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
-    <div class="coinmarketcap-currency-widget" data-currency="cardano" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
+    <div class="coinmarketcap-currency-widget" data-currency="ethlend" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="storj" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+    <div class="coinmarketcap-currency-widget" data-currency="cardano" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
+        data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+    <div class="coinmarketcap-currency-widget" data-currency="iota" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
+        data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="ark" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
-    <div class="coinmarketcap-currency-widget" data-currency="nav" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
+    <div class="coinmarketcap-currency-widget" data-currency="nav-coin" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="icon" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="qtum" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+    <div class="coinmarketcap-currency-widget" data-currency="salt" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
+        data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="dogecoin" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+    
 </body>
 
 </html>
