--- a/crypto-dashboard/index.html
+++ b/crypto-dashboard/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Crypto Dashboard</title>
     <meta http-equiv="refresh" content="3600">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         .coinmarketcap-currency-widget {
             width: 90%;
