--- a/crypto-dashboard/index.html
+++ b/crypto-dashboard/index.html
@@ -26,9 +26,19 @@
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="ethlend" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
-    <div class="coinmarketcap-currency-widget" data-currency="storj" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
+    <div class="coinmarketcap-currency-widget" data-currency="dogecoin" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
+        data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+    <div class="coinmarketcap-currency-widget" data-currency="digibyte" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
+        data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+    <div class="coinmarketcap-currency-widget" data-currency="reddcoin" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
+        data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+    <div class="coinmarketcap-currency-widget" data-currency="goldcoin" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
+        data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+    <div class="coinmarketcap-currency-widget" data-currency="flash" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="cardano" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
+        data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+    <div class="coinmarketcap-currency-widget" data-currency="storj" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="iota" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
@@ -42,7 +52,7 @@
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="salt" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
-    <div class="coinmarketcap-currency-widget" data-currency="dogecoin" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
+    <div class="coinmarketcap-currency-widget" data-currency="vertcoin" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     
 </body>
