--- a/crypto-dashboard/index.html
+++ b/crypto-dashboard/index.html
@@ -36,6 +36,8 @@
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="goldcoin" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+    <div class="coinmarketcap-currency-widget" data-currency="kurrent" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
+        data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="flash" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="cardano" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
