--- a/crypto-dashboard/index.html
+++ b/crypto-dashboard/index.html
@@ -50,7 +50,11 @@
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="ark" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+    <div class="coinmarketcap-currency-widget" data-currency="neuro" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
+        data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="qtum" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
+        data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+    <div class="coinmarketcap-currency-widget" data-currency="tron" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="vertcoin" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
