--- a/crypto-dashboard/index.html
+++ b/crypto-dashboard/index.html
@@ -34,9 +34,7 @@
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="reddcoin" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
-    <div class="coinmarketcap-currency-widget" data-currency="goldcoin" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
-        data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
-    <div class="coinmarketcap-currency-widget" data-currency="cryptoforecast" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
+    <div class="coinmarketcap-currency-widget" data-currency="bytecoin" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="kurrent" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
@@ -48,11 +46,7 @@
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="iota" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
-    <div class="coinmarketcap-currency-widget" data-currency="ark" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
-        data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="neuro" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
-        data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
-    <div class="coinmarketcap-currency-widget" data-currency="qtum" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="tron" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
