--- a/crypto-dashboard/index.html
+++ b/crypto-dashboard/index.html
@@ -34,8 +34,7 @@
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="reddcoin" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
-    <div class="coinmarketcap-currency-widget" data-currencyid="372" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
-        data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+    <div class="coinmarketcap-currency-widget" data-currencyid="372" data-base="USD" data-secondary="" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="false"></div>
     <div class="coinmarketcap-currency-widget" data-currency="kurrent" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
         data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
     <div class="coinmarketcap-currency-widget" data-currency="flash" data-base="USD" data-secondary="" data-ticker="true" data-rank="true"
